--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -4,8 +4,9 @@
 
     // --col-secondary-darkest:hsl(181, 100%, 13%);
     // --col-secondary-dark: rgb(0, 95, 97);
-    --col-secondary: hsl(180, 86%, 28%);
-    // --col-secondary-light: hsl(181, 70%, 39%);
+    --col-secondary: hsl(180, 68%, 41%);
+    --col-secondary-base: hsl(180, 86%, 28%);
+    // --col-secondary-light: hsl(181, 61%, 52%);
     // --col-secondary-lightest: hsl(180, 32%, 56%);
 
     --col-darkest: hsl(191, 13%, 17%);
@@ -14,23 +15,3 @@
     --col-light: hsl(187, 7%, 75%);
     --col-lightest: hsl(192, 6%, 85%);
 }
-
-// $colors: (
-//     primary: (
-//         400: #fd5901,
-//     ),
-//     secondary: (
-//         400: hsl(180, 86%, 28%),
-//     ),
-//     grey: (
-//         800: hsl(191, 13%, 17%),
-//         700: hsl(188, 10%, 30%),
-//         400: hsl(188, 6%, 50%),
-//         300: hsl(187, 7%, 75%),
-//         200: hsl(192, 6%, 85%),
-//     )
-// );
-
-// $test: (
-//     color: red
-// )
