--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,10 +1,10 @@
 @use '../abstracts/mixins' as *;
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 
 $ff-primary: 'Nunito', sans-serif;
 
 $fw-reg: 400;
-$fw-bold: 800;
+$fw-bold: 700;
 
 :root {
     --fs-h1: 2.75rem;
@@ -19,7 +19,7 @@ $fw-bold: 800;
     --fs-body: 1rem;
     --lh-body: 1.5rem;
 
-    --fs-small: 0.75rem;
+    --fs-small: 0.7rem;
     --lh-small: 1rem;
 }
 
@@ -68,4 +68,9 @@ h3 {
 h4 {
     font-size: var(--fs-h4);
     line-height: var(--lh-h4);
+}
+
+small {
+    font-size: var(--fs-small);
+    line-height: var(--lh-small);
 }
