--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -11,32 +11,36 @@
     font-size: 0.875rem;
     line-height: var(--lh-body);
     cursor: pointer;
+
+    &-primary {
+        @extend .btn;
+        
+        background-color: var(--col-primary);
+        color: var(--col-darkest);
+        border: 2px solid var(--col-primary);
+    
+        &:hover {
+            background-color: var(--col-primary-darker);
+        }
+    }
+
+    &-secondary {
+        @extend .btn;
+    
+        background-color: transparent;
+        color: var(--col-primary);
+        border: 2px solid var(--col-primary);
+    
+        &:hover {
+            background-color: hsla(0, 0%, 100%, 0.2);
+        }
+    }
     
 }
 
-.btn-primary {
-    background-color: var(--col-primary);
-    color: var(--col-darkest);
-    // box-shadow: 0px 3px 2.2px 0px hsla(0, 0%, 100%, 0.02),
-    //             0px 7px 5.3px 0px hsla(0, 0%, 100%, 0.03),
-    //             0px 12px 10px 0px hsla(0, 0%, 100%, 0.04),
-    //             0px 22px 18px 0px hsla(0, 0%, 100%, 0.04),
-    //             0px 42px 33px 0px hsla(0, 0%, 100%, 0.05),
-    //             0px 100px 80px 0px hsla(0, 0%, 100%, 0.07);
-
-    &:hover {
-        background-color: var(--col-primary-darker);
-    }
-}
-
-.btn-secondary {
-    background-color: transparent;
-    color: var(--col-primary);
-    border: 2px solid var(--col-primary);
-
-    &:hover {
-        background-color: hsla(0, 0%, 100%, 0.2);
-    }
+.disabled {
+    opacity: 0.3;
+    pointer-events: none;
 }
 
 .btn-big {
@@ -47,4 +51,3 @@
 .btn-small {
     padding: 0.24rem 0.75rem;
 }
-
