--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,4 +1,5 @@
 @use '../base/typography' as *;
+@use '../base/custom' as *;
 @use '../abstracts/colors' as *;
 
 .btn {
@@ -51,3 +52,58 @@
 .btn-small {
     padding: 0.24rem 0.75rem;
 }
+
+#top-btn {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0;
+    border: 1px solid var(--col-neutral);
+    border-radius: $br-m;
+    background-color: var(--col-dark);
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover {
+        background-color: var(--col-darkest);
+    }
+    
+    .iconify {
+        font-size: 1rem;
+        margin: 0.75rem;
+        margin-bottom: 0.5rem;
+        color: var(--col-secondary);       
+    }
+
+    &.reveal {
+        display: block;
+        animation-name: btn-reveal;
+        animation-duration: 0.5s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-out;
+
+        .iconify {
+            animation-name: arrow-up;
+            animation-duration: 1.5s;
+            animation-fill-mode: forwards;
+            animation-timing-function: ease;
+        }
+    }
+
+    @keyframes btn-reveal {
+        0% {opacity: 0;}
+        100% {opacity: 1;}
+    }
+
+    @keyframes arrow-up {
+        0% { transform: translateY(0); }
+        25% { transform: translateY(0.25rem);}
+        50% { transform: translateY(-0.25rem);}
+        75% { transform: translateY(0.25rem);}
+        100% { transform: translateY(0);}
+        
+    }
+}
+
